CIRC-2205: Respect Tenant Timezone in circulation logs records (#1587)